# pseudo-projector

./: README.md  pyproject.toml
pseudo_projector/: __init__.py  pseudo_projector.py
tests/: test_pseudo_projector.py
