[project]
name = "pseudo-projector"
version = "0.0.2"
description = "Implementation of the Pseudo-Projector, application of multigrid methods to deep neural networks, by Vitaly Bulgakov"
authors = [
    { name = "Phil Wang", email = "lucidrains@gmail.com" }
]
readme = "README.md"
requires-python = ">= 3.10"
license = { file = "LICENSE" }
keywords = [
    'artificial intelligence',
    'deep learning',
    'multigrid'
]

classifiers=[
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.10',
]

dependencies = [
    "einops>=0.8.1",
    "torch>=2.5",
    "torch-einops-utils>=0.0.30"
]

[project.urls]
Homepage = "https://pypi.org/project/pseudo-projector/"
Repository = "https://codeberg.org/lucidrains/pseudo-projector"

[project.optional-dependencies]
examples = []
test = [
    "pytest"
]

[tool.pytest.ini_options]
pythonpath = [
    "."
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build]
include = [
    "pseudo_projector",
    "pyproject.toml",
    "README.md",
    "LICENSE"
]

[tool.hatch.build.targets.wheel]
packages = ["pseudo_projector"]
